Contribution 4 corrections